--- a/engine.cfg
+++ b/engine.cfg
@@ -1,14 +1,21 @@
-; Engine configuration file.
-; It's best edited using the editor UI and not directly,
-; since the parameters that go here are not all obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
 
-
 name="crawler"
+main_scene="res://World.tscn"
 icon="res://icon.png"
+
+[display]
+
+width=480
+height=360
+use_vsync=false
+test_width=480
+test_height=360
+
+[input]
+
+fire=[mbutton(0, 1), jbutton(0, 0), key(Space)]
+move_down=[key(Down), key(S), jaxis(0, 3)]
+move_up=[key(Up), key(W), jaxis(0, 2)]
+move_left=[key(Left), key(A), jaxis(0, 0)]
+move_right=[key(Right), key(D), jaxis(0, 1)]
