movement anim integrated

--- a/engine.cfg
+++ b/engine.cfg
@@ -2,15 +2,22 @@
 
 name="crawler"
 main_scene="res://World.tscn"
+boot_splash_fullsize=false
 icon="res://icon.png"
 
 [display]
 
+stretch_mode="viewport"
+stretch_aspect="keep"
 width=480
 height=360
-use_vsync=false
 test_width=480
 test_height=360
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
 
 [input]
 
