--- a/engine.cfg
+++ b/engine.cfg
@@ -1,18 +1,18 @@
 [application]
 
 name="crawler"
-main_scene="res://World.tscn"
+main_scene="res://cave.tscn"
 boot_splash_fullsize=false
 icon="res://icon.png"
 
 [display]
 
+test_width=960
+test_height=720
 stretch_mode="viewport"
 stretch_aspect="keep"
 width=480
 height=360
-test_width=480
-test_height=360
 
 [image_loader]
 
